[package]
name = "csp"
version = "0.1.0"
description = "Content Security Policy making helper."
keywords = ["CSP"]
categories = ["config", "web-programming"]

license = "MIT"
repository = "https://github.com/ljoonal/CSP-rs"
authors = ["ljoonal"]

edition = "2018"

[features]

# This can give a minor speedup, but disables checking if the same directive already exists.
allow_duplicate_directives = []

[badges]
maintenance = { status = "experimental" }