[package]
name = "csp"
version = "2.0.0"
description = "A small Content Security Policy creation helper."
keywords = ["CSP"]
categories = ["config", "web-programming"]

license = "MIT"
repository = "https://github.com/ljoonal/CSP-rs"
authors = ["ljoonal"]

edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }
